--- a/reb/templates/index.html
+++ b/reb/templates/index.html
@@ -26,7 +26,7 @@
     <link href="../static/vendor/datatables/dataTables.bootstrap4.css" rel="stylesheet">
 
     <!-- Custom styles for this template-->
-{#    <link href="../static/css/sb-admin.css" rel="stylesheet">#}
+    <link href="../static/css/sb-admin.css" rel="stylesheet">
 
 
 </head>
