--- a/reb/templates/index.html
+++ b/reb/templates/index.html
@@ -6,8 +6,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="Recession EyeBall" content="">
+    <meta name="REB-TEAM" content="">
 
     <title>SB Admin - Dashboard</title>
 
@@ -26,7 +26,7 @@
     <link href="../static/vendor/datatables/dataTables.bootstrap4.css" rel="stylesheet">
 
     <!-- Custom styles for this template-->
-    <link href="../static/css/sb-admin.css" rel="stylesheet">#}
+    <link href="../static/css/sb-admin.css" rel="stylesheet">
 
 
 </head>
@@ -35,7 +35,7 @@
 
 <nav class="navbar navbar-expand navbar-dark bg-dark static-top">
 
-    <a class="navbar-brand mr-1" href="index.html">Start Bootstrap</a>
+    <a class="navbar-brand mr-1" href="index.html">REB</a>
 
     <button class="btn btn-link btn-sm text-white order-1 order-sm-0" id="sidebarToggle" href="#">
         <i class="fas fa-bars"></i>
@@ -114,33 +114,33 @@
                             <i class="fas fa-list"></i> Variables</div>
                         <div class="card-body">
                             <div class="container">
-                                <h2>Form control: select</h2>
-                                <p>The form below contains two dropdown menus (select lists):</p>
+{#                                <h2>Form control: select</h2>#}
+{#                                <p>The form below contains two dropdown menus (select lists):</p>#}
                                 <form>
                                     <div class="form-group">
                                         <label for="select-target">Select target variable (select one):</label>
                                         <select class="form-control" id="select-target">
-                                            <option selected="selected" value="13">CMRMTSPL</option>
+                                            <option selected="selected" value="0">PAYEMS</option>
                                             <option value="12">INDPRO</option>
-                                            <option value="0">PAYEMS</option>
                                             <option value="14">W875RX1</option>
+                                            <option value="13">CMRMTSPL</option>
                                         </select>
                                         <br>
                                         <label for="select-indicator">Select predictor variables (hold shift/ctrl to select more than one):</label>
                                         <select multiple class="form-control" id="select-indicator">
+                                            <option selected="selected" value="0">PAYEMS</option>
                                             <option selected="selected" value="1">AWHNONAG</option>
                                             <option selected="selected" value="2">CES9091000001</option>
-                                            <option value="12">CMRMTSPL</option>
-                                            <option value="10">DGS10</option>
-                                            <option value="11">INDPRO</option>
+                                            <option value="3">USGOVT</option>
+                                            <option value="4">UNEMPLOY</option>
+                                            <option value="5">LNS13023706</option>
                                             <option value="6">MVPHGFD027MNFRBDAL</option>
                                             <option value="7">MNFCTRIRSA</option>
                                             <option value="8">MORTGAGE30US</option>
                                             <option value="9">MORTGAGE15US</option>
-                                            <option value="5">LNS13023706</option>
-                                            <option value="0">PAYEMS</option>
-                                            <option value="4">UNEMPLOY</option>
-                                            <option value="3">USGOVT</option>
+                                            <option value="10">DGS10</option>
+                                            <option value="11">INDPRO</option>
+                                            <option value="12">CMRMTSPL</option>
                                             <option value="13">W875RX1</option>
                                         </select>
                                     </div>
